--- a/app/src/main/res/layout/activity_message.xml
+++ b/app/src/main/res/layout/activity_message.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFF2E1">
+    android:background="#F1FADA">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/layout_group_chat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary"
+        android:background="#265073"
         android:fitsSystemWindows="true"
         android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent">
@@ -86,7 +86,8 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:text="This chat currently has no messages!"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+            android:textColor="#265073"/>
     </RelativeLayout>
 
     <TextView
@@ -120,7 +121,8 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:adjustViewBounds="true"
-            android:src="@drawable/ic_add_circle_black_24px" />
+            android:src="@drawable/ic_add_circle_black_24px"
+            app:tint="#265073" />
 
         <EditText
             android:id="@+id/chatEditText"
@@ -134,8 +136,8 @@
             android:hint="Enter Message"
             android:inputType="text"
             android:maxLines="6"
-            android:textColor="@color/black"
-            android:textColorHint="#868686"
+            android:textColor="#265073"
+            android:textColorHint="#265060"
             tools:ignore="Autofill" />
 
         <ImageButton
@@ -146,7 +148,8 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="10dp"
             android:background="?attr/selectableItemBackground"
-            android:src="@drawable/ic_send_black_24" />
+            android:src="@drawable/ic_send_black_24"
+            app:tint="#265073" />
 
     </RelativeLayout>
 
